<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.elllistech.cardealership.addCustomerFragment"
    android:id="@+id/add_fragment"
    android:rowCount="6"
    android:columnCount="5">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/first_name"
        android:id="@+id/txtView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp"
        android:textSize="@dimen/label_text"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/last_name"
        android:id="@+id/txtView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="114dp"
        android:textSize="@dimen/label_text"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/car_make"
        android:id="@+id/txtView3"
        android:textSize="@dimen/label_text"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="184dp"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/car_cost"
        android:id="@+id/txtView4"
        android:layout_marginTop="254dp"
        android:textSize="@dimen/label_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtFirstName"
        android:layout_toRightOf="@+id/txtView"
        android:layout_toEndOf="@+id/txtView"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtLastName"
        android:layout_alignRight="@+id/txtFirstName"
        android:layout_alignEnd="@+id/txtFirstName"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtCarMake"
        android:layout_toEndOf="@+id/txtView2"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txtCarCost"
        android:layout_alignEnd="@+id/txtLastName"
        android:layout_marginTop="240dp"
        android:layout_marginLeft="10dp" />
</RelativeLayout>
